<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDataActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_data_diri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_100dp"
        android:textStyle="bold"
        android:textSize="@dimen/_60sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ayam_enak"
        />

    <TextView
        android:id="@+id/tv_inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:textSize="@dimen/_20sp"
        android:layout_marginTop="@dimen/_200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ayam_enak"/>

    <TextView
        android:id="@+id/tv_inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_inputUsername"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ayam_enak"
         />

    <TextView
        android:id="@+id/tv_inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_inputEmail"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ayam_enak"
        />
    <TextView
        android:id="@+id/tv_inputresetpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_reset_password"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_inputPassword"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:fontFamily="@font/ayam_enak"
        />

</androidx.constraintlayout.widget.ConstraintLayout>